# langboard

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: format-py.yaml  format-ts.yaml  lint-py.yaml
docker/: docker-compose.dev.yaml  docker-compose.docs.yaml  docker-compose.flows.yaml  docker-compose.frontend-watcher.yaml  docker-compose.kafka.yaml  docker-compose.ollama.cpu.yaml  docker-compose.ollama.gpu.yaml  docker-compose.ollama.shared.yaml  docker-compose.ollama.yaml  docker-compose.pg.yaml  docker-compose.prod.yaml  docker-compose.redis.yaml  docker-compose.server.yaml  docker-compose.ui-watcher.yaml
docker/backend/: docker-entrypoint.sh
docker/cache/: redis.conf
docker/db/: backup.sh  init.sql
docker/db_backup/: Dockerfile  backup.sh  cron.tab  docker-entrypoint.sh
docker/envs/: server-common.env.template  server.env.template
docker/server/: conf-docs.template  conf.template  dev.conf.template  nginx.conf  prod.conf.template
docs/: Dockerfile  docusaurus.config.ts  package.json
docs/src/css/: custom.css
scripts/: quickstart-ollama-cpu.bat  quickstart-ollama-cpu.sh  quickstart-ollama-gpu.bat  quickstart-ollama-gpu.sh  quickstart.bat  quickstart.sh  run_bot_cron.sh  run_docker_compose.bat  run_docker_compose.sh  update-docker-envs.sh
src/: .dockerignore
src/api/langboard/: App.py  CLI.py  Constants.py  ServerRunner.py
src/api/langboard/ai/: BotDefaultTrigger.py  BotScheduleHelper.py  LangflowHelper.py
src/api/langboard/commands/: CommandUtils.py  CreateActivityCommand.py  CreateBotScopeCommand.py  CreateMetadataCommand.py  CreateModelCommand.py  CreatePublisherCommand.py  CreateRoleCommand.py  CreateSeedCommand.py  CreateServiceCommand.py  DbMigrateCommand.py  RunCommand.py
src/api/langboard/filter/: RoleFilter.py
src/api/langboard/middlewares/: AuthMiddleware.py  RoleMiddleware.py
src/api/langboard/migrations/: env.py  script.py.mako
src/api/langboard/publishers/: AppSettingPublisher.py  BotPublisher.py  CardAttachmentPublisher.py  CardCommentPublisher.py  CardPublisher.py  CheckitemPublisher.py  InternalBotPublisher.py  MetadataPublisher.py  ProjectBotPublisher.py  ProjectColumnPublisher.py  ProjectLabelPublisher.py  ProjectPublisher.py  ProjectWikiPublisher.py  UserPublisher.py  __init__.py
src/api/langboard/resources/: Resource.py  __init__.py
src/api/langboard/security/: Auth.py  RoleFinder.py  RoleSecurity.py
src/api/langboard/services/: Service.py
src/api/langboard/tasks/: WebhookTask.py
src/backend/: Dockerfile
src/backend/langboard/: App.py  AppConfig.py  CLI.py  Constants.py  Loader.py  ServerRunner.py  cli.py  constants.py
src/backend/langboard/ai/: BotScheduleHelper.py  LangflowHelper.py  __init__.py
src/backend/langboard/commands/: CommandUtils.py  CreateCmdCommand.py  DbDowngradeCommand.py  DbSeedCommand.py  DbUpgradeCommand.py  RunBotCronTaskCommand.py  RunBrokerCommand.py
src/backend/langboard/consumers/: NotificationPublishConsumer.py  SocketPublishConsumer.py
src/backend/langboard/filter/: RoleFilter.py
src/backend/langboard/locales/: EmailTemplateNames.py
src/backend/langboard/middlewares/: AuthMiddleware.py  GZipDecompressMiddleware.py  QueryStringMiddleware.py  RoleMiddleware.py  TestMiddleware.py  __init__.py
src/backend/langboard/migrations/: env.py
src/backend/langboard/models/: AppSetting.py  BaseActivityModel.py  BaseMetadataModel.py  BaseReactionModel.py  BaseRoleModel.py  Bot.py  BotSchedule.py  BotTrigger.py  Card.py  CardActivity.py  CardAssignedProjectLabel.py  CardAssignedUser.py  CardAttachment.py  CardComment.py  CardCommentReaction.py  CardFile.py  CardMetadata.py  CardRelationship.py  ChatHistory.py  ChatTemplate.py  CheckGroup.py  Checkitem.py  CheckitemAssignedUser.py  CheckitemTimer.py  CheckitemTimerRecord.py  Checklist.py  GlobalCardRelationshipType.py  GlobalTaskRelationshipType.py  Group.py  GroupAssignedUser.py  Project.py  ProjectActivity.py  ProjectAssignedBot.py  ProjectAssignedUser.py  ProjectColumn.py  ProjectInvitation.py  ProjectLabel.py  ProjectRole.py  ProjectWiki.py  ProjectWikiActivity.py  (+20 more)
src/backend/langboard/publishers/: AppSettingPublisher.py  BotPublisher.py  CardAttachmentPublisher.py  CardCommentPublisher.py  CardPublisher.py  CardRelationshipPublisher.py  CheckitemPublisher.py  ChecklistPublisher.py  MetadataPublisher.py  UserPublisher.py  (+8 more)
src/flows/: Dockerfile  pyproject.toml
src/flows/langboard_flows/: App.py  AppInstance.py  CLI.py  CliExecutor.py  Constants.py  ServerRunner.py  ensure_path.py
src/frontend/: .prettierignore  .prettierrc.js  Dockerfile  components.json  eslint.config.js  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: App.tsx  Router.tsx  constants.ts  global.d.ts  i18n.tsx  main.tsx
src/resources/flows/: default_flow.json  lm_studio_flow.json  ollama_flow.json
src/shared/core/: Env.py  FastAPIAppConfig.py  FastAPIRunner.py  ModuleLoader.py
src/shared/models/: AppSetting.py  BaseActivityModel.py  BaseMetadataModel.py  BaseRoleModel.py  Bot.py  BotSchedule.py  Card.py  CardAssignedProjectLabel.py  CardCommentReaction.py  CardRelationship.py  ChatTemplate.py  Checkitem.py  InternalBotSetting.py  Project.py  ProjectAssignedUser.py  ProjectWikiActivity.py  ProjectWikiAssignedUser.py  ProjectWikiAttachment.py  User.py  UserActivity.py  UserEmail.py  __init__.py
src/shared/ts/: package.json  rollup.config.js  tsconfig.json
src/socket/: .editorconfig  .prettierrc.js  Dockerfile  ecosystem.config.cjs  eslint.config.js  package.json  rollup.config.js  tsconfig.json
src/socket/src/: Constants.ts  SafeExit.ts  imports.ts  index.ts
src/ui/: .dockerignore  .editorconfig  .prettierrc.js  Dockerfile  index.html  package.json  tailwind.config.js  transform-variants.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/ui/src/: App.tsx  Router.tsx  constants.ts  global.d.ts  i18n.ts  main.tsx
(+3074 files in other folders)
