[tool.poetry]
name = "langboard"
version = "0.1.0"
description = ""
authors = ["Yamon <battlecruser@yamon.io>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "langboard", from = "src/backend"}]
include = ["src/backend/langboard/*", "src/backend/langboard/**/*"]


[tool.poetry.scripts]
langboard = 'langboard.CLI:execute'


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
routes = "^2.5.1"
python-multipart = "^0.0.17"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
sqlmodel = "^0.0.22"
bcrypt = "^4.3.0"
cryptocode = "^0.1"
pyjwt = "^2.10.1"
redis = "^5.2.1"
rich = "^13.9.4"
boto3 = "^1.38.23"
watchdog = "^6.0.0"
httpx = "^0.27.2"
anyio = "^4.9.0"
requests = "^2.32.3"
celery = "^5.5.2"
fastapi-mail = "^1.5.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.29.1"}
genson = "^1.3.0"
argcomplete = "^3.6.2"
inflect = "^5.6.2"
pyyaml = "^6.0.2"
python-crontab = "^3.2.0"
psutil = "^7.0.0"
uvicorn = "^0.34.2"
websockets = "^15.0.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.1.1"
ruff = "^0.7.4"
boto3-stubs = {extras = ["s3"], version = "^1.38.23"}


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["Test*.py"]
console_output_style = "progress"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.report]
omit = [
    "**/__init__.py",
]



[tool.ruff]
line-length = 120
exclude = ["migrations"]
lint.extend-select = ["I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
